test_suite/tests/ui/float/validate/unknown.stderr
error: Unknown validation attribute: `meaningful`.
       Possible attributes are `greater`, `greater_or_equal`, `less`, `less_or_equal`, `predicate`, `finite`, `with`, `error`.
 --> tests/ui/float/validate/unknown.rs:3:19
  |
3 | #[nutype(validate(meaningful))]
  |                   ^^^^^^^^^^
